fix: update dialog z-index

--- a/components/PageCarnival/VerifyTaskModal/style.module.scss
+++ b/components/PageCarnival/VerifyTaskModal/style.module.scss
@@ -3,6 +3,14 @@
   padding: 2.5rem 3.33rem;
   background-color: white;
   border-radius: 1.33rem;
+  position: relative;
+  z-index: 100000;
+
+  :global {
+    .MuiDialog-root {
+      z-index: 1700 !important;
+    }
+  }
 
   .modalHeader {
     display: flex;
